---
source: crates/plotnik-lib/tests/conformance.rs
---
==== files ====
# main.ptk
Main = (program (expression_statement (Idents)))
# idents.ptk
Idents = (binary_expression (identifier) @x (identifier) @x)

==== diagnostics ====
error: capture `@x` already defined in this scope
 --> idents.ptk:1:45
  |
1 | Idents = (binary_expression (identifier) @x (identifier) @x)
  |                                             ^^^^^^^^^^^^^^^
  |
help: rename one capture, or use a labeled alternation if they are mutually exclusive branches
